--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ TODO -
     Make while len(boxes) in main loop end when len < 1 instead of zero
     Clean up & abstract out code
     Change variables to snake case
+    Look at changing validation to take in phrase to ask player
